--- a/sociocracy_base/views/sociocracy_menu.xml
+++ b/sociocracy_base/views/sociocracy_menu.xml
@@ -1,20 +1,5 @@
 <?xml version="1.0"?>
 <odoo>
-            <!--<field name="name">roles</field>-->
-            <!--<field name="view_type">form</field>-->
-            <!--<field name="search_view_id" ref="view_brew_declaration_filter"/>-->
-        <!--</record>-->
-
-    <act_window
-            id="action_sociocracy_role"
-            name="action_sociocracy_role"
-            res_model="role"
-            view_mode="tree,form"
-            view_id="view_role_tree"
-    />
-    <menuitem
-            id="menu_main_sociocracy"
-            name="Sociocracy"
-            action="action_sociocracy_role" />
-
+    <menuitem id="menu_sociocracy_main" name="Sociocracy"/>
+    <menuitem id="menu_sociocracy_base" name="Sociocracy" parent="menu_sociocracy_main"/>
 </odoo>
