--- a/sociocracy_base/views/role.xml
+++ b/sociocracy_base/views/role.xml
@@ -17,11 +17,20 @@
             <field name="model">role</field>
             <field name="arch" type="xml">
                 <form string="Role" name="role">
-                    <group>
-                        <field name="name"/>
-                        <field name="circle_id"/>
-                        <field name="person_id"/>
-                    </group>
+                    <header>
+                        <field name="state" widget="statusbar"/>
+                    </header>
+                    <sheet string="Role">
+	                    <group>
+	                        <field name="name"/>
+	                        <field name="circle_id"/>
+	                        <field name="person_id"/>
+	                    </group>
+                    </sheet>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers" groups="base.group_user"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                    </div>
                 </form>
             </field>
         </record>
