[IMP] add ir model access file. empty for now

--- a/shared_gouvernance_base/views/circle.xml
+++ b/shared_gouvernance_base/views/circle.xml
@@ -4,7 +4,7 @@
 
         <record id="view_circle_tree" model="ir.ui.view">
             <field name="name">view.circle.tree</field>
-            <field name="model">circle</field>
+            <field name="model">shared.gouvernance.circle</field>
             <field name="arch" type="xml">
                 <tree string="Circles" name="circles">
                     <field name="name"/>
@@ -14,7 +14,7 @@
 
         <record id="view_circle_form" model="ir.ui.view">
             <field name="name">view.circle.form</field>
-            <field name="model">circle</field>
+            <field name="model">shared.gouvernance.circle</field>
             <field name="arch" type="xml">
                 <form string="circle" name="circle">
                     <group>
@@ -25,17 +25,17 @@
         </record>
 
     <act_window
-            id="action_sociocracy_circle"
+            id="action_shared_gouvernance_circle"
             name="Circles"
-            res_model="circle"
+            res_model="shared.gouvernance.circle"
             view_mode="tree,form"
             view_id="view_circle_tree"
     />
 
-    <menuitem id="menu_sociocracy_circles"
+    <menuitem id="menu_shared_gouvernance_circles"
               name="Circles"
-              parent="menu_sociocracy_base"
-              action="action_sociocracy_circle"
+              parent="menu_shared_gouvernance_base"
+              action="action_shared_gouvernance_circle"
     />
 
     </data>
