[TYPO] correcting typo

--- a/shared_governance_base/views/circle.xml
+++ b/shared_governance_base/views/circle.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
 	<data>
 
         <record id="view_circle_tree" model="ir.ui.view">
             <field name="name">view.circle.tree</field>
-            <field name="model">shared.gouvernance.circle</field>
+            <field name="model">shared.governance.circle</field>
             <field name="arch" type="xml">
                 <tree string="Circles" name="circles">
                     <field name="name"/>
@@ -14,12 +13,20 @@
 
         <record id="view_circle_form" model="ir.ui.view">
             <field name="name">view.circle.form</field>
-            <field name="model">shared.gouvernance.circle</field>
+            <field name="model">shared.governance.circle</field>
             <field name="arch" type="xml">
                 <form string="circle" name="circle">
-                    <group>
-                        <field name="name"/>
-                    </group>
+                    <header>
+                    
+                    </header>
+					<sheet>
+	                    <group>
+	                        <field name="name"/>
+	                    </group>
+	                    <notebook>
+	                    
+	                    </notebook>
+                    </sheet>
                 </form>
             </field>
         </record>
@@ -27,7 +34,7 @@
     <act_window
             id="action_shared_gouvernance_circle"
             name="Circles"
-            res_model="shared.gouvernance.circle"
+            res_model="shared.governance.circle"
             view_mode="tree,form"
             view_id="view_circle_tree"
     />
