[IMP] circle view as sheet w/ pages

--- a/shared_governance_base/views/circle.xml
+++ b/shared_governance_base/views/circle.xml
@@ -29,6 +29,7 @@
 	                        </group>
 	                        <group>
 	                        	<field name="parent_id"/>
+	                        	<field name="policy_id"/>
 	                        </group>
 	                    </group>
 	                    <notebook>
